--- a/configure.ac
+++ b/configure.ac
@@ -41,7 +41,7 @@ PKG_CHECK_MODULES(BASE, [glib-2.0 gio-2.0 gio-unix-2.0])
 AC_SUBST(BASE_CFLAGS)
 AC_SUBST(BASE_LIBS)
 
-PKG_CHECK_MODULES(SQLITE3, [sqlite3])
+PKG_CHECK_MODULES(GOM, [gom-1.0])
 
 AC_CONFIG_FILES([
 Makefile
