--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,8 @@ AC_PREREQ([2.63])
 
 AC_INIT([xdg-document-portal],[0.0.1])
 
+AC_SYS_LARGEFILE
+
 AC_PROG_CC
 AM_PROG_CC_C_O
 AC_DISABLE_STATIC
@@ -9,7 +11,7 @@ AC_DISABLE_STATIC
 LT_PREREQ([2.2.6])
 LT_INIT([disable-static])
 
-AC_CONFIG_SRCDIR([xdg-document-portal.c])
+AC_CONFIG_SRCDIR([xdp-main.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([1.11 no-define no-dist-gzip dist-bzip2 tar-ustar foreign])
