Move app-id tracking code out of xdp-main.c
This is functionality that will be needed in all
portal services, so separate it out.

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,6 +53,8 @@ xdg_document_portal_SOURCES = \
 	$(dbus_built_sources)	\
 	xdp-resources.h		\
 	xdp-resources.c		\
+	xdp-util.h		\
+	xdp-util.c		\
 	$(NULL)
 
 xdg_document_portal_LDADD = $(BASE_LIBS) $(GOM_LIBS)
