--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ LT_INIT([disable-static])
 AC_CONFIG_SRCDIR([xdp-main.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([1.11 no-define no-dist-gzip dist-bzip2 tar-ustar foreign])
+AM_INIT_AUTOMAKE([1.11 no-define no-dist-gzip dist-bzip2 tar-ustar foreign subdir-objects])
 AC_PROG_SED
 
 # Enable silent rules is available
@@ -39,7 +39,7 @@ AC_SUBST(DBUS_SERVICE_DIR)
 AC_SUBST([GLIB_COMPILE_RESOURCES], [`$PKG_CONFIG --variable glib_compile_resources gio-2.0`])
 AC_SUBST([GDBUS_CODEGEN], [`$PKG_CONFIG --variable gdbus_codegen gio-2.0`])
 
-PKG_CHECK_MODULES(BASE, [glib-2.0 gio-2.0 gio-unix-2.0])
+PKG_CHECK_MODULES(BASE, [glib-2.0 gio-2.0 gio-unix-2.0 fuse])
 AC_SUBST(BASE_CFLAGS)
 AC_SUBST(BASE_LIBS)
 
